updating and modify file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <!-- Div for quiz content -->
         <div id="questionsDiv">
             <h1>Coding Quiz Challenge</h1>
-            <p>Try to answer the following code-Quiz questions within the time limit. if you don not answer the time given then geam is over!</p>
+            <p>Try to answer the following code-Quiz questions within the time limit. 
+                if you don not answer the time given then The Time is up!</p>
             <ul id="choicesUl"></ul>
             <!-- Buttons -->
             <button id="startTime">Start Quiz</button>
