--- a/HighScores.html
+++ b/HighScores.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- This is the style links -->
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
     <!-- This is the title-->
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>Code Quiz</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <!-- This is a wrapper -->
     <div id="wrapper">
-        <!-- Div for timer -->
-        <div id="currentTime"></div>
-        <!-- Div for quiz content -->
-        <div id="questionsDiv">
-            <h1>Highscores</h1>
-            <ul id="highScore"></ul>
-            <!-- Buttons -->
-            <button id="goBack">Go Back</button>
-            <button id="clear" value="reset">Clear Highscore</button>
-        </div>
+      <!-- Div for timer -->
+      <div id="currentTime"></div>
+      <!-- Div for quiz content -->
+      <div id="questionsDiv">
+        <h1>Highscores</h1>
+        <ul id="highScore"></ul>
+        <!-- Buttons -->
+        <button type="button" class="btn btn-outline-danger btn-lg" id="goBack">
+          Go Back
+        </button>
+        <button
+          type="button"
+          class="btn btn-outline-info btn-lg"
+          id="clear"
+          value="reset"
+        >
+          Clear Highscore
+        </button>
+      </div>
     </div>
     <script src="HighScores.js"></script>
-</body>
-
+  </body>
 </html>
