--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <title>Code Quiz</title>
+  </head>
 
-   <title>Code Quiz</title>
-</head>
-
-<body>
+  <body>
     <!-- Link to highscores -->
-    <a href="HighScores.html">View Highscores</a>
-    <!-- This is a wrapper -->
-    <div id="wrapper">
+    <div class="container">
+      <div id="view">
+        <button type="button" class="btn btn-warning btn-lg">
+          <a href="HighScores.html">View Highscores </a>
+        </button>
+      </div>
+
+      <!-- This is a wrapper -->
+      <div id="wrapper">
         <!-- Div for timer -->
         <div id="currentTime"></div>
         <!-- Div for quiz content -->
         <div id="questionsDiv">
-            <h1>Coding Quiz Challenge</h1>
-            <p>Try to answer the following code-Quiz questions within the time limit. 
-                if you don not answer the time given then The Time is up!</p>
-            <ul id="choicesUl"></ul>
-            <!-- Buttons -->
-            <button id="startTime">Start Quiz</button>
-        </div>
+          <h1>Coding Quiz Challenge</h1>
+          <p>
+            Try to answer the following code-Quiz questions within the time
+            limit. if you don not answer the time given then The Time is up!
+          </p>
+          <ul id="choicesUl"></ul>
+          <!-- Buttons -->
 
+          <button type="button" class="btn btn-outline-success" id="startTime">
+            Start Quiz
+          </button>
+        </div>
+      </div>
     </div>
 
-
     <script src="script.js"></script>
-
-
-</body>
-
+  </body>
 </html>
